hard-gists/6038174/run.log
=== Docker Run Log for 6038174 ===
Started at: Mi 29. Okt 16:18:21 CET 2025

[2025-10-29 16:18:22] START: Running container for 6038174
[2025-10-29 16:18:22] SUCCESS: Container 36013a8d673fbd421f20cd8383b9ccbd940a6034141c53934c07d4c20d3f6329 started for 6038174
=== Container logs for 6038174 ===
  File "/snippet.py", line 51
    print outfile, "generated"
    ^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 6038174 ===
[2025-10-29 16:18:24] INFO: Container 36013a8d673fbd421f20cd8383b9ccbd940a6034141c53934c07d4c20d3f6329 has stopped
